@@ -28,7 +28,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
     "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
     "Dist::Zilla::Plugin::ConfirmRelease" => 0,
-    "Dist::Zilla::Plugin::CopyFilesFromRelease" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
     "Dist::Zilla::Plugin::DistINI" => 0,
     "Dist::Zilla::Plugin::ExecDir" => 0,
     "Dist::Zilla::Plugin::ExtraTests" => 0,
@@ -58,7 +58,6 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::NextRelease" => 0,
     "Dist::Zilla::Plugin::PodCoverageTests" => 0,
     "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
-    "Dist::Zilla::Plugin::Prereqs" => 0,
     "Dist::Zilla::Plugin::Prereqs::FromCPANfile" => 0,
     "Dist::Zilla::Plugin::PruneCruft" => 0,
     "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
@@ -76,7 +75,7 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.019",
+  "VERSION" => "0.020",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -88,7 +87,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
   "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
   "Dist::Zilla::Plugin::ConfirmRelease" => 0,
-  "Dist::Zilla::Plugin::CopyFilesFromRelease" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
   "Dist::Zilla::Plugin::DistINI" => 0,
   "Dist::Zilla::Plugin::ExecDir" => 0,
   "Dist::Zilla::Plugin::ExtraTests" => 0,
@@ -118,7 +117,6 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::NextRelease" => 0,
   "Dist::Zilla::Plugin::PodCoverageTests" => 0,
   "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
-  "Dist::Zilla::Plugin::Prereqs" => 0,
   "Dist::Zilla::Plugin::Prereqs::FromCPANfile" => 0,
   "Dist::Zilla::Plugin::PruneCruft" => 0,
   "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
