@@ -3,7 +3,7 @@ requires 'Dist::Zilla';
 requires 'Dist::Zilla::Plugin::BumpVersionAfterRelease';
 requires 'Dist::Zilla::Plugin::CheckChangesHasContent';
 requires 'Dist::Zilla::Plugin::ConfirmRelease';
-requires 'Dist::Zilla::Plugin::CopyFilesFromRelease';
+requires 'Dist::Zilla::Plugin::CopyFilesFromBuild';
 requires 'Dist::Zilla::Plugin::DistINI';
 requires 'Dist::Zilla::Plugin::ExecDir';
 requires 'Dist::Zilla::Plugin::ExtraTests';
@@ -33,7 +33,6 @@ requires 'Dist::Zilla::Plugin::ModuleBuildTiny::Fallback';
 requires 'Dist::Zilla::Plugin::NextRelease';
 requires 'Dist::Zilla::Plugin::PodCoverageTests';
 requires 'Dist::Zilla::Plugin::PodSyntaxTests';
-requires 'Dist::Zilla::Plugin::Prereqs';
 requires 'Dist::Zilla::Plugin::Prereqs::FromCPANfile';
 requires 'Dist::Zilla::Plugin::PruneCruft';
 requires 'Dist::Zilla::Plugin::ReadmeAnyFromPod';
@@ -48,4 +47,3 @@ requires 'Dist::Zilla::Role::PluginBundle::Easy';
 requires 'Moose';
 requires 'Scalar::Util';
 test_requires 'Test::More' => '0.88';
-author_requires 'Dist::Zilla::Plugin::ModuleShareDirs';
